--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
